--- a/app/src/main/res/menu/note.xml
+++ b/app/src/main/res/menu/note.xml
@@ -11,5 +11,5 @@
         android:id="@+id/note_menu_delete"
         android:icon="@drawable/ic_delete_black_24dp_vector"
         android:title="@string/note_menu_delete_title"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
 </menu>
